Fix hero image clarity - remove gradient overlay, use dark backdrop for text contrast

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,3 +61,20 @@ body {
 .to-primary-light\/80 {
   --tw-gradient-to: rgb(118 75 162 / 0.8) var(--tw-gradient-to-position);
 }
+
+/* Background opacity utilities */
+.bg-black\/40 {
+  background-color: rgb(0 0 0 / 0.4);
+}
+
+.bg-purple-600 {
+  background-color: rgb(147 51 234);
+}
+
+.bg-purple-700 {
+  background-color: rgb(126 34 206);
+}
+
+.hover\:bg-purple-700:hover {
+  background-color: rgb(126 34 206);
+}
